--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     &nbsp
     <a href="https://github.com/ghost042099954334/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
+    <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+      new Crate({
+          server: '941038455717265438', // Ciganska Mahala
+          channel: '941038456166035516' // #💬︱ᴄʜᴀᴛ
+      })
+  </script>
   </div>
 </div>
 
