--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">9h057 Developer&nbsp</h2>
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Kelps Skid&nbsp</h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://www.youtube.com/channel/UCwvO3x6ZaYkYt8gZux25GSA" style="color: white;"><i class="fab fa-youtube" style="font-size: 2em;"></i></a>
     &nbsp
