--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     &nbsp
     <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
       new Crate({
-          server: '951957869492830228', // Ciganska Mahala
-          channel: '961698455334563901' // #💬︱ᴄʜᴀᴛ
+          server: '951957869492830228', // 𝗖𝗖 𝗧𝗲𝗮𝗺
+          channel: '961698476935229501' // #『⚙』ʙᴏᴛ-ᴄᴏᴍᴍᴀɴᴅꜱ
       })
   </script>
   </div>
